image align issue fix

--- a/style.scss
+++ b/style.scss
@@ -207,8 +207,15 @@ height: 20rem;
             order: 2;
 
             .hero-img-container {
+                // border : 2px solid red ; 
+                display : flex; 
+                justify-content: center; 
+                align-items : center; 
+                
 
-                .hero-img {}
+                .hero-img {
+                    // width: 100%;
+                }
             }
         }
 
